<resources>
    <string name="app_name">Display Photos v2</string>
    <string name="get_started">LET\'S GET STARTED</string>
    <string name="Photos">Photos</string>
    <string name="Videos">Videos</string>
    <string name="Albums">Albums</string>
    <string name="Search">Search</string>
    <string name="Tag">Tags</string>
    <string name="Date">Date</string>
    <string name="Location">Location</string>
    <string name="addTagBtn">Save Tags</string>
    <string name="cancel">Cancel</string>
    <string name="tag_groups">Tag Groups</string>
    <string name="current_tags">Current Tags</string>
    <string name="no_current_tags">There are no tags for this file.</string>
    <string name="location_queryHint">Where are you?</string>
    <string name="location_dialog_title">Search for location</string>
    <string name="close_button">close button</string>
    <string name="location_textview">at</string>
    <string name="search_hint">Search your files</string>
    <string name="searchNoResultsText">Search by tag and/or location</string>
    <string name="tab1">All</string>
    <string name="tab2">Images</string>
    <string name="tab3">Videos</string>
    <string name="date_range">Date Range</string>
    <string name="edit">Edit</string>
    <string name="set_date_range">Set Date Range</string>
    <string name="from">From: %1$s</string>
    <string name="to">To: %1$s</string>
    <string name="Done">Done</string>
    <string name="date_range_placeholder">%1$s To %2$s</string>
    <string name="Reset">Reset</string>
    <string name="searchNoMatchText">Your search did not match any files</string>
</resources>