<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_dialog_title"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_close_black_18dp"
                android:id="@+id/close_location_dialog"
                android:contentDescription="@string/close_button"
                android:background="@drawable/close_btn_background"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchview"
                app:iconifiedByDefault="false"
                android:inputType="textAutoComplete"
                app:queryHint="@string/location_queryHint"
                android:layout_gravity="center"
                android:background="@drawable/searchview_background"
                android:layout_marginBottom="20dp"
                app:queryBackground="@android:color/transparent" />

        <!--<AutoCompleteTextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:id="@+id/autocomplete"
            android:hint="@string/location_queryHint"
            android:layout_gravity="center"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawablePadding="13dp"
            android:paddingStart="20dp"
            android:background="@drawable/searchview_background"/>-->

    </LinearLayout>



</ScrollView>
